syntax = "proto3";

package productViews;

import "product-common.proto";

service ProductViews {
  rpc GetProductById(GetProductByIdRequest) returns (productCommon.ProtoProduct) {}
  rpc GetProducts(GetProductsRequest) returns (productCommon.ProtoProducts) {}
}

message GetProductsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetProductByIdRequest {
  string id = 1;
}

